--- a/navScroll.html
+++ b/navScroll.html
@@ -5,12 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<style>
-.section{height: 500px;background: pink;}
-.nav{position: fixed;top:20%;right:0;}
-.nav a{display: block;}
-.current{color: green}
-	</style>
+	<link rel="stylesheet" href="scss/navScroll.css">
 </head>
 <body>
 	<div class="nav">
@@ -21,12 +16,14 @@
 		<a href="#section5">导航5</a>
 		<a href="#section6">导航6</a>
 	</div>
+	<div class="head"></div>
 	<div class="section" id="section1">1</div>
 	<div class="section" id="section2">2</div>
 	<div class="section" id="section3">3</div>
 	<div class="section" id="section4">4</div>
 	<div class="section" id="section5">5</div>
 <div class="section" id="section6">6</div>
+	<div class="footer"></div>
 <script language="javascript" src="http://www.51cto.com/js/jquery/jquery-1.9.0.min.js"></script>
 <script type="text/javascript">
 var $navs = $('.nav a'),          // 导航
@@ -51,8 +48,5 @@ $navs.on('click', function(e) {
   }, 400);
 });
 </script>
-
-
-
 </body>
 </html>
