--- a/navScroll.html
+++ b/navScroll.html
@@ -24,7 +24,7 @@
 	<div class="section" id="section5">5</div>
 <div class="section" id="section6">6</div>
 	<div class="footer"></div>
-<script language="javascript" src="http://www.51cto.com/js/jquery/jquery-1.9.0.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
 <script type="text/javascript">
 var $navs = $('.nav a'),          // 导航
   $sections = $('.section'),       // 模块
