--- a/navScroll.html
+++ b/navScroll.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 	<div class="nav">
-		<a href="#section1">导航1</a>
-		<a href="#section2">导航2</a>
-		<a href="#section3">导航3</a>
-		<a href="#section4">导航4</a>
-		<a href="#section5">导航5</a>
-		<a href="#section6">导航6</a>
+		<a href="#section1">page active</a>
+		<a href="#section2">page active</a>
+		<a href="#section3">page active</a>
+		<a href="#section4">page active</a>
+		<a href="#section5">page active</a>
+		<a href="#section6">page active</a>
 	</div>
 	<div class="head"></div>
 	<div class="section" id="section1">1</div>
@@ -33,14 +33,14 @@ var $navs = $('.nav a'),          // 导航
 $window.on('scroll', function() {
   var scrollTop = $window.scrollTop(),
     len = navLength;
-  for (; len > -1; len--) {
-    var that = $sections.eq(len);
-    if (scrollTop >= that.offset().top) {
-       $navs.removeClass('current').eq(len).addClass('current');
-       break;
-    }
-  }
-});
+		for (; len > -1; len--) {
+			var that = $sections.eq(len);
+			if (scrollTop >= that.offset().top) {
+				 $navs.removeClass('current').eq(len).addClass('current');
+				 break;
+			}
+		}
+	});
 $navs.on('click', function(e) {
   e.preventDefault();
   $('html, body').animate({
