--- a/navScroll.html
+++ b/navScroll.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 	<div class="nav">
-		<a href="#section1">page active</a>
-		<a href="#section2">page active</a>
-		<a href="#section3">page active</a>
-		<a href="#section4">page active</a>
-		<a href="#section5">page active</a>
-		<a href="#section6">page active</a>
+		<a href="#section1">page active1</a>
+		<a href="#section2">page active2</a>
+		<a href="#section3">page active3</a>
+		<a href="#section4">page active4</a>
+		<a href="#section5">page active5</a>
+		<a href="#section6">page active6</a>
 	</div>
 	<div class="head"></div>
 	<div class="section" id="section1">1</div>
